--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ukparliament/rss-notification-service#readme",
   "dependencies": {
+    "aws-sdk": "^2.335.0",
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "mailchimp-api-v3": "^1.12.0",
