--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "aws-sdk": "^2.340.0",
     "axios": "^0.18.0",
+    "chai": "^4.2.0",
     "cheerio": "^1.0.0-rc.2",
     "local-dynamo": "^0.5.0",
     "mailchimp-api-v3": "^1.12.0",
